[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Audiowide-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/credits.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.607843, 1 )

[sub_resource type="DynamicFont" id=6]
size = 45
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 13
extra_spacing_char = 10
extra_spacing_space = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("credis:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "up"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("credis:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 140, 400 ), Vector2( 140, -1650 ) ]
}

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="credis" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 600.0
margin_right = 711.0
margin_bottom = 4075.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "slime shift
devloped by
space game
studio



1-moha_dev:

Founder
game_director
concept idea
lead programer
ui programer



2-rashad :

gameplay programer



3-monday:

narrator 
level designer
game designer
lt maneger 



4-wadoud:

lead artist
2d artist
sound designer



5-aboAvudl:

2d artist 
bg artist 


"
align = 1
valign = 1

[node name="exitb" type="Button" parent="."]
margin_left = 12.0
margin_top = 331.0
margin_right = 45.0
margin_bottom = 352.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.211765, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Exit"
flat = true

[node name="credits_up" type="AnimationPlayer" parent="."]
autoplay = "up"
anims/RESET = SubResource( 4 )
anims/up = SubResource( 5 )

[connection signal="pressed" from="exitb" to="." method="_on_exitb_pressed"]
[connection signal="animation_finished" from="credits_up" to="." method="_on_credits_up_animation_finished"]
